# ftdi-embedded-hal

./: Cargo.toml
examples/: at24c04.rs  ws2812.rs
src/: error.rs  gpio.rs  i2c.rs  lib.rs  spi.rs
