[package]
name = "ftdi-embedded-hal"
version = "0.9.1"
authors = ["Alex M. <alexmgit@protonmail.com>"]
description = "embedded-hal implementation for FTDI USB devices."
keywords = ["ftdi", "usb", "io", "hal"]
categories = ["embedded"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ftdi-rs/ftdi-embedded-hal/"
documentation = "https://docs.rs/ftdi-embedded-hal"
readme = "README.md"

[features]
static = ["libftd2xx/static"]
# features only for tests: select ftdi-rs or libftd2xx-rs
ftd2-lib = []
ftdi-lib = []
default = []

[dependencies]
nb = "^1"
embedded-hal = "~0.2.4"
ftdi-mpsse = "^0.1"
libftd2xx = "~0.31.0"
ftdi = "^0.1"

[dev-dependencies]
version-sync = "~0.9.2"
eeprom24x = "0.3.0"

[badges]
maintenance = { status = "experimental" }
